# flutter_rust_cam_test

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/flutter_rust_cam_test/: MainActivity.kt
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: cam_area.dart  custom_button.dart  effect_list.dart  effets_model.dart  main.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: camera.dart  simple.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/: Podfile
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml  build.rs
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: camera.rs  mod.rs  simple.rs
rust/src/ml/: image.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_flutter_rust_cam_test.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_flutter_rust_cam_test.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
